# sort_in_c

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: sortings.h  utils.h
src/: main.c  sortings.c  utils.c
tests/: test_sort.c
